says download lol

--- a/content/index.html
+++ b/content/index.html
@@ -14,7 +14,7 @@ cssid = "home"
         <h1><span class="nats-colour-blue-lite">Open Source.</span> <span class="nats-colour-green-dark">Performant.</span> <span class="nats-colour-blue-dark">Simple.</span> <span class="nats-colour-green-lite">Scalable.</span></h1>
         <p class="lead">A central nervous system for modern, reliable<br> and scalable cloud and distributed systems.</p>
         <p class="extra-info">
-          <a id="download-button" class="btn btn-lg" href="/download">Get Started</a>
+          <a id="download-button" class="btn btn-lg" href="/download">Download</a>
         </p>
         <p class="bottom-info">NATS is an open source, modern and secure messaging system for distributed systems and scalable cloud applications. NATS is ideal for cloud native applications, IoT device messaging and microservices architectures.</p>
         <p class="bottom-info">The Apcera team maintains the NATS server (written in Go) with clients written in Python, Ruby, Node.js, Elixir, Java, NGINX, C and C#. The community has contributed a growing list of libraries, including Rust, Lua, PHP and many more.</p>
