Updated titles for downloads

--- a/content/download/nats-io/nats.html
+++ b/content/download/nats-io/nats.html
@@ -1,8 +1,8 @@
 +++
-title = ""
+title = "Go NATS Client"
 description = ""
 categories = ["clients","supported"]
-tags = ["go"]
+tags = ["golang"]
 [menu.downloads]
   name = "Go"
   weight = 0
