Added Pivotal logo to homepage

--- a/content/index.html
+++ b/content/index.html
@@ -21,7 +21,8 @@ description = ""
         <p class="bottom-info">NATS is an open source, modern and secure messaging system for distributed systems and scalable cloud applications. NATS is ideal for cloud native applications, IoT device messaging and microservices architectures.</p>
         <p class="bottom-info">The Apcera team maintains the NATS server (written in Go) with clients written in Python, Ruby, Node.js, Elixir, Java, NGINX, C and C#. The community has contributed a growing list of libraries, including Rust, Lua, PHP and many more.</p>
         <div class="row" id="bottom-logo-container">
-          <div class="col-xs-6 col-sm-15 ericsson">
+
+          <div class="col-xs-6 col-md-2 ericsson">
             <a target="_blank" href="http://www.ericsson.com/">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 476.08 95.47">
                 <title>Ericsson</title>
@@ -45,7 +46,8 @@ description = ""
               </svg>
             </a>
           </div>
-          <div class="col-xs-6 col-sm-15 htc">
+
+          <div class="col-xs-6 col-md-2 htc">
             <a target="_blank" href="http://www.htc.com/us/">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 246.2 81.74">
                 <title>htc</title>
@@ -55,7 +57,8 @@ description = ""
               </svg>
             </a>
           </div>
-          <div class="col-xs-6 col-sm-15 baidu">
+
+          <div class="col-xs-6 col-md-2 baidu">
             <a target="_blank" href="http://www.baidu.com/">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 221.8 71.25">
                 <title>Baidu</title>
@@ -68,7 +71,8 @@ description = ""
               </svg>
             </a>
           </div>
-          <div class="col-xs-6 col-sm-15 siemens">
+
+          <div class="col-xs-6 col-md-2 siemens">
             <a target="_blank" href="http://www.siemens.com/entry/cc/en/">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 554.7 88.3">
                 <title>Siemens</title>
@@ -84,7 +88,8 @@ description = ""
               </svg>
             </a>
           </div>
-          <div class="col-xs-6 col-sm-15 vmware">
+
+          <div class="col-xs-6 col-md-2 vmware">
             <a target="_blank" href="http://www.vmware.com/">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 187.57 28.8">
                 <title>vmware</title>
@@ -98,6 +103,25 @@ description = ""
               </svg>
             </a>
           </div>
+
+          <div class="col-xs-6 col-md-2 ericsson">
+            <a target="_blank" href="http://pivotal.io/">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 458.38 105.21">
+                <title>Pivotal</title>
+                <path d="M440.73,93.5v10.18h-1V93.5h-4.24v-1h9.44v1h-4.2Zm16.67,10.18-0.61-9.85h0L453,103.68H451.7l-3.46-9.85h-0.08l-0.54,9.85h-1l0.68-11.13h1.49l3.51,10.12h0.09l3.84-10.12h1.49l0.66,11.13h-1Z" fill="#fff"/>
+                <g>
+                  <path d="M99.58,15.47H83.64V0H99.58V15.47h0Zm0,88h-16V26.78h16v76.69Z" fill="#fff"/>
+                  <path d="M191.79,26.78L169.53,93c-3.83,10.82-10.65,12.22-16.17,12.22-8.2,0-13.14-3.76-16-12.2L118.79,38h-7.35V26.78H130.6l19.1,61.59c0.84,2.63,1.36,4.2,3.67,4.2s2.89-1.59,3.66-4.2l19.51-61.55h15.25v0Z" fill="#fff"/>
+                  <path d="M231.16,26.78c20.68,0,35.11,13.65,35.11,33.2V72c0,19.53-14.43,33.19-35.11,33.19S196,91.5,196,72V60c0-19.55,14.45-33.2,35.12-33.2m0,65.81c12.37,0,20-9.36,20-20.58V60c0-11.23-7.6-20.59-20-20.59-13.1,0-20,9.36-20,20.59V72c0,11.22,7.23,20.58,20,20.58" fill="#fff"/>
+                  <path d="M393.87,29.24a135.88,135.88,0,0,0-29.61-3.54c-21,0-34,13.24-34,34.57v8.4c0,21.32,13,34.75,34,34.75,0.49,0,4.22,0,5.92-.15V90.37c-0.65,0-5.44.16-5.92,0.16-11.41,0-19.09-8.81-19.09-21.9V60.27c0-13.11,7.67-21.9,19.09-21.9,5.18,0,13,.42,15.66,1l0.87,0.17v63.9h16V31.89c0-1.37,0-1.89-2.9-2.65" fill="#fff"/>
+                  <rect x="412.17" y="0.04" width="15.97" height="103.4" fill="#fff"/>
+                  <path d="M28,0H0V103.42H16.58V14.37h9.74c2.06,0,3.84.1,5.59,0.13,14.41,0.29,21.46,6,21.46,17.2v1.21c0,10.36-5.69,17.23-21.4,17.23H27.33V64c1.63,0.08,3.14.14,4.69,0.14,22.54,0,38.46-8.86,38.46-31.1V31.74C70.48,8.68,53.15,0,28,0" fill="#fff"/>
+                  <path d="M294.64,10.26V26.78h26V39.17h-26V83.83c0,7,4.48,7.2,11,7.2h15.07v12.39H300.29c-15.08,0-21.81-6-21.81-19.59V12.48Z" fill="#fff"/>
+                </g>
+              </svg>
+            </a>
+          </div>
+
         </div>
         <p class="bottom-info">Companies like Ericsson, HTC, Baidu, Siemens and VMware rely on the NATS enterprise messaging system for its highly performant and resilient capabilites.</p>
       </div>
