--- a/content/index.html
+++ b/content/index.html
@@ -91,39 +91,35 @@ description = ""
 
           <div class="col-xs-6 col-md-2 vmware">
             <a target="_blank" href="http://www.vmware.com/">
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 187.57 28.8">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 180.47 28.81">
                 <title>vmware</title>
-                <path d="M80.57,26.6L72.37,3.7a3.59,3.59,0,0,1-.2-1.1,1.92,1.92,0,0,1,2-1.9,2.12,2.12,0,0,1,2,1.7L83,22.1l6.9-19.8a2,2,0,0,1,2-1.6h0.2a2.16,2.16,0,0,1,2.1,1.6L101,22.1l6.9-19.8a2,2,0,0,1,1.9-1.6,1.92,1.92,0,0,1,2,1.9,3.54,3.54,0,0,1-.3,1.1l-8.3,22.9a2.38,2.38,0,0,1-2.2,1.8h-0.2a2.29,2.29,0,0,1-2.2-1.8L92,7.1l-6.8,19.5A2.29,2.29,0,0,1,83,28.4h-0.1a2.49,2.49,0,0,1-2.3-1.8" fill="#fff"/>
-                <path d="M140.47,2.6a2,2,0,0,1,2-2,1.94,1.94,0,0,1,2,2V7.2a11,11,0,0,1,9.3-6.6,1.94,1.94,0,0,1,2,2,1.9,1.9,0,0,1-1.8,2c-5.2.6-9.5,4.6-9.5,12.4v9.2a2,2,0,0,1-4,0V2.6h0Z" fill="#fff"/>
-                <path d="M168.77,28.6c-7.3,0-13.3-5.7-13.3-14V14.5c0-7.7,5.4-14,12.7-14,7.9,0,12.3,6.5,12.3,13.6a1.9,1.9,0,0,1-1.9,1.9h-19.2c0.6,5.8,4.6,9.1,9.3,9.1a10.61,10.61,0,0,0,7.6-3.1,1.61,1.61,0,0,1,1.1-.5,1.69,1.69,0,0,1,1.7,1.7,1.76,1.76,0,0,1-.6,1.3,12.09,12.09,0,0,1-9.7,4.1m7.9-15.5c-0.4-4.9-3.2-9.1-8.5-9.1-4.6,0-8.1,3.9-8.6,9.1h17.1Z" fill="#fff"/>
-                <path d="M111.87,20.2V20.1c0-5.7,4.7-8.7,11.5-8.7a27.52,27.52,0,0,1,8.3,1.2V11.7c0-4.9-3-7.4-8.1-7.4a13.65,13.65,0,0,0-6.3,1.2,2.54,2.54,0,0,1-.7.2,1.84,1.84,0,0,1-1.8-1.7,1.75,1.75,0,0,1,1.1-1.7A17.52,17.52,0,0,1,124,.8q5.7,0,8.7,3c1.8,1.8,2.8,4.4,2.8,7.9V26.6a1.92,1.92,0,0,1-1.9,2,1.84,1.84,0,0,1-1.9-1.9V24.1a11.77,11.77,0,0,1-9.8,4.7c-4.9-.2-10-3.1-10-8.6m19.9-2.1V15.5a27.38,27.38,0,0,0-7.9-1.2c-5.1,0-7.9,2.2-7.9,5.6V20c0,3.4,3.1,5.4,6.8,5.4,4.9,0,9-3,9-7.3" fill="#fff"/>
-                <path d="M7.37,2.4a3.78,3.78,0,0,0-5.1-2A3.79,3.79,0,0,0,.37,5.5L9,24.1c1.3,2.9,2.8,4.5,5.4,4.5,2.9,0,4.1-1.7,5.4-4.5,0,0,7.5-16.3,7.6-16.5a1.08,1.08,0,0,1,1.1-.7,1.22,1.22,0,0,1,1.2,1.2V24c0,2.5,1.4,4.5,4,4.5s4-2,4-4.5V11.1A4,4,0,0,1,42,7a3.88,3.88,0,0,1,4.1,4.1v13c0,2.5,1.4,4.5,4,4.5s4-2,4-4.5v-13A4,4,0,0,1,58.27,7a3.88,3.88,0,0,1,4.1,4.1v13c0,2.5,1.4,4.5,4,4.5s4-2,4-4.5V9.3c0-5.5-4.4-9.3-9.7-9.3a12.76,12.76,0,0,0-8.5,3.7C50.47,1.5,48,.1,44,0.1c-4.3,0-8.1,3.6-8.1,3.6A10.09,10.09,0,0,0,28.57.1c-3.8,0-6.9,1.7-8.7,5.9l-5.5,12.9Z" fill="#fff"/>
-                <path d="M181,4h0a3.42,3.42,0,0,1,3.3-3.4,3.27,3.27,0,0,1,3.3,3.3h0a3.42,3.42,0,0,1-3.3,3.4A3.27,3.27,0,0,1,181,4m6-.1h0a2.69,2.69,0,0,0-2.7-2.7,2.75,2.75,0,0,0-2.7,2.7h0a2.69,2.69,0,0,0,2.7,2.7A2.63,2.63,0,0,0,187,3.9" fill="#fff"/>
-                <path d="M183,2.6a0.43,0.43,0,0,1,.4-0.4h1.1a1.22,1.22,0,0,1,.9.3,0.91,0.91,0,0,1,.3.7h0a1.17,1.17,0,0,1-.6,1l0.5,0.6a0.37,0.37,0,0,1,.1.3,0.32,0.32,0,0,1-.3.3,0.52,0.52,0,0,1-.4-0.2l-0.7-.9h-0.6V5a0.4,0.4,0,1,1-.8,0L183,2.6h0Zm1.5,1.2a0.47,0.47,0,0,0,.5-0.5h0a0.51,0.51,0,0,0-.6-0.5h-0.7V3.7l0.8,0.1h0Z" fill="#fff"/>
+                <path d="M80.57,26.6L72.37,3.7a3.59,3.59,0,0,1-.2-1.1A1.92,1.92,0,0,1,74.11.7h0.06a2.12,2.12,0,0,1,2,1.7L83,22.1,89.9,2.3a2,2,0,0,1,2-1.6h0.2a2.16,2.16,0,0,1,2.1,1.6L101,22.1l6.9-19.8A2,2,0,0,1,109.8.7a1.92,1.92,0,0,1,2,1.84s0,0,0,.06a3.54,3.54,0,0,1-.3,1.1l-8.3,22.9a2.38,2.38,0,0,1-2.2,1.8h-0.2a2.29,2.29,0,0,1-2.2-1.8L92,7.1,85.2,26.6A2.29,2.29,0,0,1,83,28.4H82.9a2.49,2.49,0,0,1-2.3-1.8" fill="#fff"/>
+                <path d="M140.47,2.6a2,2,0,0,1,2-2,1.94,1.94,0,0,1,2,1.88s0,0.08,0,.12V7.2a11,11,0,0,1,9.3-6.6,1.94,1.94,0,0,1,2,1.88s0,0.08,0,.12a1.9,1.9,0,0,1-1.79,2h0c-5.2.6-9.5,4.6-9.5,12.4v9.2a2,2,0,0,1-4,0V2.6h0Z" fill="#fff"/>
+                <path d="M168.77,28.6c-7.3,0-13.3-5.7-13.3-14V14.5c0-7.7,5.4-14,12.7-14,7.9,0,12.3,6.5,12.3,13.6a1.9,1.9,0,0,1-1.9,1.9h-19.2c0.6,5.8,4.6,9.1,9.3,9.1a10.61,10.61,0,0,0,7.6-3.1,1.61,1.61,0,0,1,1.1-.5,1.69,1.69,0,0,1,1.7,1.68s0,0,0,0a1.76,1.76,0,0,1-.6,1.3,12.09,12.09,0,0,1-9.7,4.1m7.9-15.5c-0.4-4.9-3.2-9.1-8.5-9.1-4.6,0-8.1,3.9-8.6,9.1h17.1Z" fill="#fff"/>
+                <path d="M111.87,20.2V20.1c0-5.7,4.7-8.7,11.5-8.7a27.52,27.52,0,0,1,8.3,1.2V11.7c0-4.9-3-7.4-8.1-7.4a13.65,13.65,0,0,0-6.3,1.2,2.54,2.54,0,0,1-.7.2,1.84,1.84,0,0,1-1.8-1.7,1.75,1.75,0,0,1,1.1-1.7A17.52,17.52,0,0,1,124,.8q5.7,0,8.7,3c1.8,1.8,2.8,4.4,2.8,7.9V26.6a1.92,1.92,0,0,1-1.84,2H133.6a1.84,1.84,0,0,1-1.9-1.78s0-.08,0-0.12V24.1a11.77,11.77,0,0,1-9.8,4.7c-4.9-.2-10-3.1-10-8.6m19.9-2.1V15.5a27.38,27.38,0,0,0-7.9-1.2c-5.1,0-7.9,2.2-7.9,5.6V20c0,3.4,3.1,5.4,6.8,5.4,4.9,0,9-3,9-7.3" fill="#fff"/>
+                <path d="M7.37,2.4A3.78,3.78,0,0,0,2.44.32L2.27,0.4a3.79,3.79,0,0,0-1.95,5l0,0.11L9,24.1c1.3,2.9,2.8,4.5,5.4,4.5,2.9,0,4.1-1.7,5.4-4.5,0,0,7.5-16.3,7.6-16.5a1.08,1.08,0,0,1,1.1-.7,1.22,1.22,0,0,1,1.2,1.2V24c0,2.5,1.4,4.5,4,4.5s4-2,4-4.5V11.1A4,4,0,0,1,41.59,7H42a3.88,3.88,0,0,1,4.1,4.1v13c0,2.5,1.4,4.5,4,4.5s4-2,4-4.5v-13A4,4,0,0,1,58,7h0.28a3.88,3.88,0,0,1,4.1,4.1v13c0,2.5,1.4,4.5,4,4.5s4-2,4-4.5V9.3c0-5.5-4.4-9.3-9.7-9.3a12.76,12.76,0,0,0-8.5,3.7C50.47,1.5,48,.1,44,0.1c-4.3,0-8.1,3.6-8.1,3.6A10.09,10.09,0,0,0,28.57.1c-3.8,0-6.9,1.7-8.7,5.9l-5.5,12.9Z" fill="#fff"/>
               </svg>
             </a>
           </div>
 
           <div class="col-xs-6 col-md-2 ericsson">
             <a target="_blank" href="http://pivotal.io/">
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 458.38 105.21">
-                <title>Pivotal</title>
-                <path d="M440.73,93.5v10.18h-1V93.5h-4.24v-1h9.44v1h-4.2Zm16.67,10.18-0.61-9.85h0L453,103.68H451.7l-3.46-9.85h-0.08l-0.54,9.85h-1l0.68-11.13h1.49l3.51,10.12h0.09l3.84-10.12h1.49l0.66,11.13h-1Z" fill="#fff"/>
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 428.14 103.47">
+                <title>pivotal</title>
                 <g>
-                  <path d="M99.58,15.47H83.64V0H99.58V15.47h0Zm0,88h-16V26.78h16v76.69Z" fill="#fff"/>
-                  <path d="M191.79,26.78L169.53,93c-3.83,10.82-10.65,12.22-16.17,12.22-8.2,0-13.14-3.76-16-12.2L118.79,38h-7.35V26.78H130.6l19.1,61.59c0.84,2.63,1.36,4.2,3.67,4.2s2.89-1.59,3.66-4.2l19.51-61.55h15.25v0Z" fill="#fff"/>
-                  <path d="M231.16,26.78c20.68,0,35.11,13.65,35.11,33.2V72c0,19.53-14.43,33.19-35.11,33.19S196,91.5,196,72V60c0-19.55,14.45-33.2,35.12-33.2m0,65.81c12.37,0,20-9.36,20-20.58V60c0-11.23-7.6-20.59-20-20.59-13.1,0-20,9.36-20,20.59V72c0,11.22,7.23,20.58,20,20.58" fill="#fff"/>
-                  <path d="M393.87,29.24a135.88,135.88,0,0,0-29.61-3.54c-21,0-34,13.24-34,34.57v8.4c0,21.32,13,34.75,34,34.75,0.49,0,4.22,0,5.92-.15V90.37c-0.65,0-5.44.16-5.92,0.16-11.41,0-19.09-8.81-19.09-21.9V60.27c0-13.11,7.67-21.9,19.09-21.9,5.18,0,13,.42,15.66,1l0.87,0.17v63.9h16V31.89c0-1.37,0-1.89-2.9-2.65" fill="#fff"/>
+                  <path d="M99.58,15.47H83.64V0H99.58V15.47h0Zm0,88h-16V26.78h16v76.69Z" transform="translate(0)" fill="#fff"/>
+                  <path d="M191.79,24.78L169.53,91c-3.83,10.82-10.65,12.22-16.17,12.22-8.2,0-13.14-3.76-16-12.2L118.79,36h-7.35V24.78H130.6l19.1,61.59c0.84,2.63,1.36,4.2,3.67,4.2s2.89-1.59,3.66-4.2l19.51-61.55h15.25v0Z" transform="translate(0)" fill="#fff"/>
+                  <path d="M231.16,24.78c20.68,0,35.11,13.65,35.11,33.2V70c0,19.53-14.43,33.19-35.11,33.19S196,89.5,196,70V58c0-19.55,14.45-33.2,35.12-33.2m0,65.81c12.37,0,20-9.36,20-20.58V58c0-11.23-7.6-20.59-20-20.59-13.1,0-20,9.36-20,20.59V70c0,11.22,7.23,20.58,20,20.58" transform="translate(0)" fill="#fff"/>
+                  <path d="M393.87,29.24a135.88,135.88,0,0,0-29.61-3.54c-21,0-34,13.24-34,34.57v8.4c0,21.32,13,34.75,34,34.75,0.49,0,4.22,0,5.92-.15V90.37c-0.65,0-5.44.16-5.92,0.16-11.41,0-19.09-8.81-19.09-21.9V60.27c0-13.11,7.67-21.9,19.09-21.9,5.18,0,13,.42,15.66,1l0.87,0.17v63.9h16V31.89c0-1.37,0-1.89-2.9-2.65" transform="translate(0)" fill="#fff"/>
                   <rect x="412.17" y="0.04" width="15.97" height="103.4" fill="#fff"/>
-                  <path d="M28,0H0V103.42H16.58V14.37h9.74c2.06,0,3.84.1,5.59,0.13,14.41,0.29,21.46,6,21.46,17.2v1.21c0,10.36-5.69,17.23-21.4,17.23H27.33V64c1.63,0.08,3.14.14,4.69,0.14,22.54,0,38.46-8.86,38.46-31.1V31.74C70.48,8.68,53.15,0,28,0" fill="#fff"/>
-                  <path d="M294.64,10.26V26.78h26V39.17h-26V83.83c0,7,4.48,7.2,11,7.2h15.07v12.39H300.29c-15.08,0-21.81-6-21.81-19.59V12.48Z" fill="#fff"/>
+                  <path d="M28,0H0V103.42H16.58v-89h9.74c2.06,0,3.84.1,5.59,0.13,14.41,0.29,21.46,6,21.46,17.2v1.21c0,10.36-5.69,17.23-21.4,17.23H27.33V64c1.63,0.08,3.14.14,4.69,0.14,22.54,0,38.46-8.86,38.46-31.1v-1.3C70.48,8.68,53.15,0,28,0" transform="translate(0)" fill="#fff"/>
+                  <path d="M294.64,10.26V26.78h26V39.17h-26V83.83c0,7,4.48,7.2,11,7.2h15.07v12.39H300.29c-15.08,0-21.81-6-21.81-19.59V12.48Z" transform="translate(0)" fill="#fff"/>
                 </g>
               </svg>
             </a>
           </div>
-
         </div>
-        <p class="bottom-info">Companies like Ericsson, HTC, Baidu, Siemens and VMware rely on the NATS enterprise messaging system for its highly performant and resilient capabilites.</p>
+        <p class="bottom-info">Companies like Ericsson, HTC, Baidu, Siemens, VMware and Pivotal rely on the NATS enterprise messaging system for its highly performant and resilient capabilities.</p>
       </div>
     </div>
   </div>
