Changed Carrenza to R3Labs product Ernest

--- a/content/community.html
+++ b/content/community.html
@@ -88,8 +88,8 @@ description = "NATS is a high performance messaging system that acts as a distri
       <td>Bridgvine provides a customer acquisition technology, and NATS acts as a transaction engine in their platform</td>
     </tr>
     <tr>
-      <td><a href="https://github.com/carrenza" target="_blank">Carrenza</a></td>
-      <td>Carrenza use NATS in their Paas Platform</td>
+      <td><a href="https://ernest.io" target="_blank">Ernest</a></td>
+      <td>Ernest use NATS in their IAAS+PAAS Platform</td>
     </tr>
     <tr>
       <td><a href="https://docs.cloudfoundry.org/concepts/architecture/messaging-nats.html" target="_blank">CloudFoundry</a></td>
