Updated for nats connectors as well as a minor adjustment/update to the social icons in the footer

--- a/content/community.html
+++ b/content/community.html
@@ -51,7 +51,7 @@ description = "NATS is a high performance messaging system that acts as a distri
     <ul class="social-list list-inline">
       <li><a target="_blank" href="https://twitter.com/nats_io"><i class="icon-twitter"></i></a></li>
       <li><a target="_blank" href="https://groups.google.com/forum/#!forum/natsio"><i class="icon-google-plus"></i></a></li>
-      <li><a target="_blank" href="https://github.com/nats-io"><i class="icon-mark-github"></i></a></li>
+      <li><a target="_blank" href="https://github.com/nats-io"><i class="icon-github"></i></a></li>
       <li><a target="_blank" href="https://docs.google.com/a/apcera.com/forms/d/104yA7oqq7SPoMDG_J9MnVE74gVwBnTmVHKP5ABHoM5k/viewform?embedded=true"><img alt="Slack" src="/img/social/slack.png"/></a></li>
     </ul>
   </div>
@@ -171,3 +171,46 @@ description = "NATS is a high performance messaging system that acts as a distri
     </tr>
   </tbody>
 </table>
+
+<hr>
+
+<h2>NATS Connectors</h2>
+
+<div class="table-responsive">
+  <table class="table table-striped">
+    <thead>
+      <tr>
+        <th class="col-md-2">Connector</th>
+        <th class="col-md-7">Description</th>
+        <th class="col-md-2">Developer</th>
+        <th class="col-md-1">Support</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td><a href="https://github.com/nats-io/nats-connector-framework" target="_blank">NATS Connector Framework</a></td>
+        <td>A pluggable Java based framework to bridge the NATS messaging system and other technologies.</td>
+        <td>NATS.io team</td>
+        <td>Apcera</td>
+      </tr>
+      <tr>
+        <td><a href="https://github.com/nats-io/nats-connector-redis" target="_blank">NATS Redis PubSub</a></td>
+        <td>The NATS Redis publish subscribe connector is provided to facilitate the bridging of NATS and Redis Publish/Subscribe.</td>
+        <td>NATS.io team</td>
+        <td>Apcera</td>
+      </tr>
+      <tr>
+        <td><a href="https://github.com/sohlich/nats-proxy" target="_blank">REST to NATS Proxy</a></td>
+        <td>This library provides a translation of HTTP requests to NATS. Client side is partly inspired by Gin to process requests</td>
+        <td><a target="_blank" href="https://github.com/sohlich">Radomír Sohlich</a></td>
+        <td>Community</td>
+      </tr>
+      <tr>
+        <td><a href="https://github.com/Logimethods/nats-connector-spark" target="_blank">Apache Spark</a></td>
+        <td>provides an Apache Spark (a fast and general engine for large-scale data processing) integration with NATS.</td>
+        <td><a target="_blank" href="https://github.com/laugimethods">Laurent Magnin</a> at Logimethods</td>
+        <td>Community</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
