Foxed doc link on community

--- a/content/community.html
+++ b/content/community.html
@@ -37,7 +37,7 @@ description = "NATS is a high performance messaging system that acts as a distri
     <ul class="list-unstyled">
       <li>Report or Fix Bugs</li>
       <li>Add New Features</li>
-      <li><a href="https://github.com/nats-io/nats-docs" target="_blank">Improve Documentation</a></li>
+      <li><a href="https://github.com/nats-io/nats-site" target="_blank">Improve Documentation</a></li>
       <li>Update Client Libraries</li>
       <li><a href="mailto:info@nats.io">Host a Meetup</a></li>
       <li><a href="https://github.com/nats-io/" target="_blank">Improve this website</a></li>
