--- a/content/community.html
+++ b/content/community.html
@@ -207,7 +207,7 @@ description = "NATS is a high performance messaging system that acts as a distri
       </tr>
       <tr>
         <td><a href="https://github.com/Logimethods/nats-connector-spark" target="_blank">Apache Spark</a></td>
-        <td>provides an Apache Spark (a fast and general engine for large-scale data processing) integration with NATS.</td>
+        <td>Provides an Apache Spark (a fast and general engine for large-scale data processing) integration with NATS.</td>
         <td><a target="_blank" href="https://github.com/laugimethods">Laurent Magnin</a> at Logimethods</td>
         <td>Community</td>
       </tr>
