add socket.io-nats adapter to NATS Connectors

--- a/content/community.html
+++ b/content/community.html
@@ -211,6 +211,12 @@ description = "NATS is a high performance messaging system that acts as a distri
         <td><a target="_blank" href="https://github.com/laugimethods">Laurent Magnin</a> at Logimethods</td>
         <td>Community</td>
       </tr>
+      <tr>
+        <td><a href="https://github.com/efmr/socket.io-nats" target="_blank">Socket.io-NATS Adapter</a></td>
+        <td>This library provides an adaptor to enable broadcasting of events to multiple separate socket.io server nodes through NATS.</td>
+        <td><a target="_blank" href="https://github.com/efmr">Edgar Ribeiro</a></td>
+        <td>Community</td>
+      </tr>
     </tbody>
   </table>
 </div>
