added Connectors to Community Page

--- a/content/community.html
+++ b/content/community.html
@@ -200,12 +200,37 @@ description = "NATS is a high performance messaging system that acts as a distri
         <td>Apcera</td>
       </tr>
       <tr>
+        <tr>
+          <td><a href="http://fluentbit.io/documentation/output/nats.html" target="_blank">Fluent Bit</a></td>
+          <td>The NATS output connector allows to flush your Fluent Bit records into a NATS Server endpoint</td>
+          <td><a target="_blank" href="http://fluentbit.io/">Fluent Bit</a></td>
+          <td>Community</td>
+        </tr>
+      <tr>
+        <td><a href="https://github.com/cloudfoundry-community/fluent-plugin-nats" target="_blank">Fluentd Event Collector</a></td>
+        <td>NATS plugin for fluentd Event Collector</td>
+        <td><a target="_blank" href="https://github.com/cloudfoundry-community">Cloud Foundry Community</a></td>
+        <td>Community</td>
+      </tr>
+      <tr>
+        <td><a href="https://github.com/r3labs/nats_to_logstash" target="_blank">Logstash</a></td>
+        <td>Resends configured NATS messages directly to Logstash through a TCP connection.</td>
+        <td><a target="_blank" href="https://github.com/r3labs">R3 Labs</a></td>
+        <td>Community</td>
+      </tr>
+      <tr>
         <td><a href="https://github.com/sohlich/nats-proxy" target="_blank">REST to NATS Proxy</a></td>
         <td>This library provides a translation of HTTP requests to NATS. Client side is partly inspired by Gin to process requests</td>
         <td><a target="_blank" href="https://github.com/sohlich">Radomír Sohlich</a></td>
         <td>Community</td>
       </tr>
       <tr>
+        <tr>
+          <td><a href="https://github.com/influxdata/telegraf/tree/8d0f50a6fd10cea1af84ccfdc2beeb1a61dd19bd/plugins/inputs/nats_consumer" target="_blank">Telegraf</a></td>
+          <td>The NATS consumer plugin reads from specified NATS subjects and adds messages to InfluxDB. The plugin expects messages in the Telegraf Input Data Formats. A Queue Group is used when subscribing to subjects so multiple instances of telegraf can read from a NATS cluster in parallel.</td>
+          <td><a target="_blank" href="https://github.com/influxdata">InfluxData</a></td>
+          <td>Community</td>
+        </tr>
         <td><a href="https://github.com/Logimethods/nats-connector-spark" target="_blank">Apache Spark</a></td>
         <td>Provides an Apache Spark (a fast and general engine for large-scale data processing) integration with NATS.</td>
         <td><a target="_blank" href="https://github.com/laugimethods">Laurent Magnin</a> at Logimethods</td>
