Updated the Docs URL Fluenbit NATS output connector points to

--- a/content/community.html
+++ b/content/community.html
@@ -108,7 +108,7 @@ description = "NATS is a high performance messaging system that acts as a distri
       <td>NATS plugin for the Fluentd Event Collector</td>
     </tr>
     <tr>
-      <td><a href="https://github.com/fluent/fluent-bit/blob/master/documentation/output/nats.md" target="_blank">FluentBit</a></td>
+      <td><a href="http://fluentbit.io/documentation/0.8/output/nats.html" target="_blank">FluentBit</a></td>
       <td>The NATS output plugin allows you to flush your records into a NATS Server end-point.</td>
     </tr>
     <tr>
@@ -201,7 +201,7 @@ description = "NATS is a high performance messaging system that acts as a distri
       </tr>
       <tr>
         <tr>
-          <td><a href="http://fluentbit.io/documentation/output/nats.html" target="_blank">Fluent Bit</a></td>
+          <td><a href="http://fluentbit.io/documentation/0.8/output/nats.html" target="_blank">Fluent Bit</a></td>
           <td>The NATS output connector allows to flush your Fluent Bit records into a NATS Server endpoint</td>
           <td><a target="_blank" href="http://fluentbit.io/">Fluent Bit</a></td>
           <td>Community</td>
