Updates based on comments.

--- a/content/support.html
+++ b/content/support.html
@@ -21,7 +21,7 @@ description = "NATS is a high performance messaging system that acts as a distri
 </div>
 
 <h2>Commercial Support</h2>
-<p>For commercial support, Apcera helps you implement and maximize the benefits of a lightweight messaging system in any environment. We support the NATS server and all Apcera supported clients. Apcera offers two NATS service plans:</p>
+<p>For commercial support, Apcera helps you implement and maximize the benefits of a lightweight messaging system in any environment. We support the NATS server and Apcera clients listed <a href="https://nats.io/download">here</a>. Apcera offers two NATS service plans:</p>
 
 <hr>
 
