--- a/content/support.html
+++ b/content/support.html
@@ -20,71 +20,6 @@ description = "NATS is a high performance messaging system that acts as a distri
   </div>
 </div>
 
-<h2>Commercial Support</h2>
-<p>For commercial support, Apcera helps you implement and maximize the benefits of a lightweight messaging system in any environment. We support the gnatsd server and Go, Node.js, and Ruby clients. Apcera offers two NATS service plans:</p>
-
-<hr>
-
-<table id="support-table" class="table table-bordered">
-  <thead>
-    <tr>
-      <th></th>
-      <th>Standard<br><em>FOR ENTERPRISE IT OPERATIONS</em></th>
-      <th>Premium<br><em>FOR MISSION CRITICAL SYSTEMS</em></th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>Service term</td>
-      <td colspan="2">Annual subscription</td>
-    </tr>
-    <tr>
-      <td>Access to a technical support website</td>
-      <td>&#x25cf;</td>
-      <td>&#x25cf;</td>
-    </tr>
-    <tr>
-      <td>Maintenance and upgrades</td>
-      <td>&#x25cf;</td>
-      <td>&#x25cf;</td>
-    </tr>
-    <tr>
-      <td>Web support (email/chat) during standard business hours (9:00AM – 5:00 PM PST)</td>
-      <td>&#x25cf;</td>
-      <td>&#x25cf;</td>
-    </tr>
-    <tr>
-      <td>Maximum number of designated contacts</td>
-      <td>1</td>
-      <td>3</td>
-    </tr>
-    <tr>
-      <td>Feature priorities</td>
-      <td></td>
-      <td>&#x25cf;</td>
-    </tr>
-    <tr>
-      <td>Prioritized issue resolution</td>
-      <td></td>
-      <td>&#x25cf;</td>
-    </tr>
-    <tr>
-      <td>Response time on non-critical issues</td>
-      <td>BEST EFFORT</td>
-      <td>WITHIN 24 HOURS</td>
-    </tr>
-    <tr>
-      <td>Response time on critical issues**</td>
-      <td>WITHIN 24 HOURS</td>
-      <td>WITHIN 4 BUSINESS HOURS</td>
-    </tr>
-    <tr>
-      <td>Pricing</td>
-      <td><a href="mailto:info@nats.io?subject=NATS Support Premium Pricing">CONTACT US</a></td>
-      <td><a href="mailto:info@nats.io?subject=NATS Support Enterprise Pricing">CONTACT US</a></td>
-    </tr>
-
-  </tbody>
-</table>
-
-<p><small>**A ‘Critical Issue’ is defined as a system down that impacts your use of NATS in a production environment. There is no viable workaround, and business is severely impacted.</small></p>
+<h2>Commercial Support and Services</h2>
+<p>Our team has decades of experience in distributed systems messaging, and are here to help you implement and maximize the benefits of a lightweight messaging system in any environment. Support is available for the NATS Server, and the Apcera supported clients listed <a href="/download">here</a>.</p>
+<p><a href="mailto:info@nats.io">Contact</a> us today to learn more about how we can help you get the most out of NATS in your environment.</p>
