Did a rough first pass on community changes

--- a/content/community.html
+++ b/content/community.html
@@ -37,11 +37,10 @@ description = "NATS is a high performance messaging system that acts as a distri
     <ul class="list-unstyled">
       <li>Report or Fix Bugs</li>
       <li>Add New Features</li>
-      <li><a href="https://github.com/nats-io/nats-site" target="_blank">Improve Documentation</a></li>
+      <li><a href="https://github.com/nats-io/nats-site#adding-documentation" target="_blank">Improve Documentation</a></li>
       <li>Update Client Libraries</li>
       <li><a href="mailto:info@nats.io">Host a Meetup</a></li>
       <li><a href="https://github.com/nats-io/" target="_blank">Improve this website</a></li>
-      <li>Join the <a href="https://docs.google.com/a/apcera.com/forms/d/104yA7oqq7SPoMDG_J9MnVE74gVwBnTmVHKP5ABHoM5k/viewform?embedded=true">NATS.io Slack group</a></li>
     </ul>
     <p>Please <a href="mailto:info@nats.io?subject=NATS suggestions">contact us</a> with any other suggestions.</p>
   </div>
@@ -60,7 +59,13 @@ description = "NATS is a high performance messaging system that acts as a distri
 
 <hr>
 
-<h2>People Using NATS</h2>
+<div class="alert alert-info" role="alert">
+  <strong>NATS Streaming is now available!</strong> - Check out the <a href="/documentation">documentation</a> to get started.
+</div>
+
+<hr>
+
+<h2>Ecosystem</h2>
 <p>Below are some example of projects and products in the ecosystem using NATS - if you would like to submit something to this list, please fork this site, and submit a pull request, or contact <a href="mailto:info@nats.io">info@nats.io</a> </p>
 
 <table class="table table-striped">
@@ -174,7 +179,10 @@ description = "NATS is a high performance messaging system that acts as a distri
 
 <hr>
 
-<h2>NATS Connectors</h2>
+<h2>Partners</h2>
+
+
+<h3>NATS Connectors</h3>
 
 <div class="table-responsive">
   <table class="table table-striped">
@@ -244,4 +252,16 @@ description = "NATS is a high performance messaging system that acts as a distri
       </tr>
     </tbody>
   </table>
+</div>
+
+<hr>
+
+<h3>Companies</h3>
+<p>To grow the NATS Ecosystem and ensure NATS meets a variety of requirements we partner with leading companies across the industry</p>
+<p>If you would like to partner with NATS, please contact <a href="mailto:info@nats.io">info@nats.io</a></p>
+
+<div class="row">
+  <div class="col-md-4">
+
+  </div>
 </div>
