Working on download updates and homepage tweaks

--- a/content/download/joshglendenning/arduino-nats.html
+++ b/content/download/joshglendenning/arduino-nats.html
@@ -7,5 +7,5 @@ tags = ["c++"]
   name = "Arduino"
   weight = 0
   identifier = "Arduino"
-  parent = "Community Clients"
+  parent = "nats-comunity"
 +++
