--- a/content/download/nats-io/elixir-nats.html
+++ b/content/download/nats-io/elixir-nats.html
@@ -7,5 +7,5 @@ tags = ["elixir"]
   name = "Elixir"
   weight = 0
   identifier = "Elixir"
-  parent = "Apcera Supported Clients"
+  parent = "nats-clients"
 +++
