--- a/content/download/nats-io/gnatsd.html
+++ b/content/download/nats-io/gnatsd.html
@@ -7,5 +7,5 @@ tags = ["server"]
   name = "NATS Server"
   weight = 0
   identifier = "NATS Server"
-  parent = "Server"
+  parent = "nats-server"
 +++
