--- a/content/download/nats-io/jnats.html
+++ b/content/download/nats-io/jnats.html
@@ -7,5 +7,5 @@ tags = ["java"]
   name = "Java"
   weight = 0
   identifier = "Java"
-  parent = "Apcera Supported Clients"
+  parent = "nats-clients"
 +++
