--- a/content/download/nats-io/nats-streaming-server.html
+++ b/content/download/nats-io/nats-streaming-server.html
@@ -4,8 +4,8 @@ description = ""
 categories = ["streaming","supported"]
 tags = ["streaming"]
 [menu.downloads]
-  name = "NATS Streaming"
+  name = "NATS Streaming Server"
   weight = 0
-  identifier = "NATS Streaming"
-  parent = "Streaming"
+  identifier = "NATS Streaming Server"
+  parent = "streaming-server"
 +++
