--- a/content/download/nats-io/nginx-nats.html
+++ b/content/download/nats-io/nginx-nats.html
@@ -7,5 +7,5 @@ tags = ["c"]
   name = "NGINX"
   weight = 0
   identifier = "NGINX"
-  parent = "Apcera Supported Clients"
+  parent = "nats-clients"
 +++
