--- a/content/download/nats-io/node-nats.html
+++ b/content/download/nats-io/node-nats.html
@@ -7,5 +7,5 @@ tags = ["javascript"]
   name = "Node.js"
   weight = 0
   identifier = "Node.js"
-  parent = "Apcera Supported Clients"
+  parent = "nats-clients"
 +++
