--- a/content/download/nats-io/python-nats.html
+++ b/content/download/nats-io/python-nats.html
@@ -7,5 +7,5 @@ tags = ["python"]
   name = "Python Tornado"
   weight = 0
   identifier = "Python Tornado"
-  parent = "Apcera Supported Clients"
+  parent = "nats-clients"
 +++
