--- a/content/download/nats-io/ruby-nats.html
+++ b/content/download/nats-io/ruby-nats.html
@@ -7,5 +7,5 @@ tags = ["ruby"]
   name = "Ruby"
   weight = 0
   identifier = "Ruby"
-  parent = "Apcera Supported Clients"
+  parent = "nats-clients"
 +++
