--- a/content/download/yuce/teacup_nats.html
+++ b/content/download/yuce/teacup_nats.html
@@ -7,5 +7,5 @@ tags = ["erlang"]
   name = "Erlang"
   weight = 0
   identifier = "Erlang"
-  parent = "Community Clients"
+  parent = "nats-comunity"
 +++
