--- a/content/index.html
+++ b/content/index.html
@@ -14,12 +14,16 @@ description = ""
           <img class="img-responsive" alt="Nats.io" src="/img/large-logo.png">
         </a>
         <h1><span class="nats-colour-blue-lite">Open Source.</span> <span class="nats-colour-green-dark">Performant.</span> <span class="nats-colour-blue-dark">Simple.</span> <span class="nats-colour-green-lite">Scalable.</span></h1>
-        <h2>Introducing NATS Streaming: Real-time streaming for<br> IoT, Mobile, and Cloud Native Applications</h2>
-        <p class="extra-info">
-          <a id="download-button" class="btn btn-lg" href="/download">Download</a>
-        </p>
+        <div class="row">
+          <div class="col-md-10 col-md-offset-1 col-lg-8 col-lg-offset-2">
+            <h2>Introducing NATS Streaming: Real-time streaming for IoT, Mobile, and Cloud Native Applications</h2>
+            <p class="lead">NATS Streaming provides real-time stream processing, at-least-once delivery, and persistence for Big Data and IoT.</p>
+            <p class="extra-info">
+              <a id="download-button" class="btn btn-lg" href="/download">Download</a>
+            </p>
+          </div>
+        </div>
         <p class="bottom-info">NATS Server is a simple, high performance open source messaging system for cloud native applications, IoT messaging, and microservices architectures.</p>
-        <p class="bottom-info">NATS Streaming provides real-time stream processing, at-least-once delivery, and persistence for Big Data and IoT</p>
         <p class="bottom-info">The Apcera team maintains the NATS Server (written in Go), NATS Streaming, and clients written in Python, Ruby, Node.js, Elixir, Java, NGINX, C, and C#. The community has contributed a growing list of libraries, including Arduino, Rust, Lua, PHP, Perl, and <a href="/download">more</a>.</p>
         <div class="row" id="bottom-logo-container">
 
