--- a/content/download/carwynmoore/perl-nats.html
+++ b/content/download/carwynmoore/perl-nats.html
@@ -7,5 +7,5 @@ tags = ["perl"]
   name = "Perl"
   weight = 0
   identifier = "Perl"
-  parent = "Community Clients"
+  parent = "nats-comunity"
 +++
