--- a/content/download/johnwlockwood/txnats.html
+++ b/content/download/johnwlockwood/txnats.html
@@ -7,5 +7,5 @@ tags = ["python"]
   name = "Python Twisted"
   weight = 0
   identifier = "Python Twisted"
-  parent = "Community Clients"
+  parent = "nats-comunity"
 +++
