--- a/content/download/mcuadros/pynats.html
+++ b/content/download/mcuadros/pynats.html
@@ -7,5 +7,5 @@ tags = ["python"]
   name = "Python"
   weight = 0
   identifier = "Python"
-  parent = "Community Clients"
+  parent = "nats-comunity"
 +++
