--- a/content/download/nats-io/csnats.html
+++ b/content/download/nats-io/csnats.html
@@ -7,5 +7,5 @@ tags = ["c#"]
   name = "C#"
   weight = 0
   identifier = "C#"
-  parent = "Apcera Supported Clients"
+  parent = "nats-clients"
 +++
