--- a/content/download/nats-io/nats.html
+++ b/content/download/nats-io/nats.html
@@ -7,5 +7,5 @@ tags = ["golang"]
   name = "Go"
   weight = 0
   identifier = "Go"
-  parent = "Apcera Supported Clients"
+  parent = "nats-clients"
 +++
