--- a/content/download/tyagihas/scala_nats.html
+++ b/content/download/tyagihas/scala_nats.html
@@ -7,5 +7,5 @@ tags = ["scala"]
   name = "Scala"
   weight = 0
   identifier = "Scala"
-  parent = "Community Clients"
+  parent = "nats-comunity"
 +++
