--- a/content/index.html
+++ b/content/index.html
@@ -24,7 +24,8 @@ description = ""
 
             <p class="bottom-info">NATS Server is a simple, high performance open source messaging system for cloud native applications, IoT messaging, and microservices architectures.</p>
             <p class="bottom-info">The Apcera team maintains the NATS Server (written in Go), NATS Streaming, and clients written in Python, Ruby, Node.js, Elixir, Java, NGINX, C, and C#. The community has contributed a growing list of libraries, including Arduino, Rust, Lua, PHP, Perl, and <a href="/download">more</a>.</p>
-            <div class="row" id="bottom-logo-container">
+
+            <div class="row bottom-logo-container">
 
               <div class="col-xs-6 col-md-2 ericsson">
                 <a target="_blank" href="http://www.ericsson.com/">
@@ -62,20 +63,6 @@ description = ""
                 </a>
               </div>
 
-              <div class="col-xs-6 col-md-2 baidu">
-                <a target="_blank" href="http://www.baidu.com/">
-                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 221.8 71.25">
-                    <title>Baidu</title>
-                    <path d="M92.9,24.6c-0.4-3.1-4.1-8.6-9-8.2-6.3.6-7.3,9.6-7.3,9.6-0.8,4.2,2,13.2,9.8,11.5S93.1,26.6,92.9,24.6ZM100.8,0c-4.3,0-7.7,4.9-7.7,11s3.5,11,7.7,11,7.7-4.9,7.7-11S105.1,0,100.8,0Zm21.6,1.8c-4.1-.9-9.1,5.6-9.6,9.8-0.6,5.2.7,10.4,6.5,11.1s9.4-5.4,10.1-10S126.4,2.7,122.4,1.8Zm19.5,28.7c0-2.2-1.8-8.9-8.7-8.9s-7.8,6.3-7.8,10.8c0,4.2.4,10.2,8.9,10S141.9,32.7,141.9,30.5ZM97.7,50.9a4.57,4.57,0,0,0-3.1,2.8,7.3,7.3,0,0,0-.3,3.8A4.42,4.42,0,0,0,98,60.9h4.1V51H97.7V50.9Zm0,0a4.57,4.57,0,0,0-3.1,2.8,7.3,7.3,0,0,0-.3,3.8A4.42,4.42,0,0,0,98,60.9h4.1V51H97.7V50.9Zm35.6-1s-8.9-6.8-14-14.3c-7-10.9-17-6.5-20.3-.9s-8.5,9.1-9.2,10S79.1,51,81.3,60.8s10,9.6,10,9.6a42.67,42.67,0,0,0,12.4-.9,25.71,25.71,0,0,1,12.4.4s15.5,5.2,19.7-4.8S133.3,49.9,133.3,49.9ZM106.7,64.8H96.6c-4.3-.9-6.1-3.8-6.3-4.4a11.47,11.47,0,0,1-.8-7,8.75,8.75,0,0,1,7.2-6.5h5.4V40.3l4.6,0.1V64.8Zm18.8-.1H113.9c-4.5-1.2-4.7-4.4-4.7-4.4V47.6l4.7-.1V59a2.42,2.42,0,0,0,1.8,1.5h4.8V47.6h5V64.7ZM94.6,53.6a7.3,7.3,0,0,0-.3,3.8A4.42,4.42,0,0,0,98,60.8h4.1V50.9H97.8A5,5,0,0,0,94.6,53.6Z" fill="#fff"/>
-                    <path d="M180.7,39.1V33.7H145.1v5.5h15.3L159,42.5H146V69.6h30.9c3.2,0,2.9-3.3,2.9-3.3V42.5h-13l1.1-3.4h12.8Zm-6.9,24.7a1.53,1.53,0,0,1-.9.9H152.4V58.4h21.4v5.4h0Zm0-10.6H152.4v-6h21.4v6h0Z" fill="#fff"/>
-                    <path d="M221.4,33.9h-14V31.2h-6.6v2.6h-16V69.6h5.8V38.4h30.8V33.9Zm-3.7,7.4V39.2h-5.6v2.1H200.5v-2h-5.3v2h-3.6l0.1,4.1h3.5V53h19.4c2.7,0,3.1-2.9,3.1-2.9V45.3h4.1V41.2l-4.1.1h0ZM212,48.1a1.75,1.75,0,0,1-1.1.9H200.4V45.2H212v2.9h0ZM192.3,58.5l9,5.2c-0.7.8-3.8,1.8-3.8,1.8h-6v4h8.1a39.7,39.7,0,0,0,6.9-2.8,13.65,13.65,0,0,0,5.4,2.4h9.3v-4h-7a10.64,10.64,0,0,1-3.6-1.4l10.6-6.1V54.3H192.3v4.2h0Zm18.6,0-5.1,2.7-4.7-2.7h9.8Z" fill="#fff"/>
-                    <path d="M65.9,39.6h7.8V32.8H65.9v6.8Zm0,29.8h7.8V42.6H65.9V69.4Z" fill="#fff"/>
-                    <path d="M53.2,42.6H36.6v5.6H51.1s3.5,0.9,3.5,3v2H41.5s-5.2.5-6.8,6.7a10.43,10.43,0,0,0,.3,4.8,8.32,8.32,0,0,0,6.2,4.8h21V50.3a10.19,10.19,0,0,0-9-7.7h0Zm1.5,21.6H44.1a3.49,3.49,0,0,1-2-1.8,2.38,2.38,0,0,1,0-1.9,3.79,3.79,0,0,1,2.3-2H54.8v5.7H54.7Z" fill="#fff"/>
-                    <path d="M33,60a9.34,9.34,0,0,0-5.6-8.8c5-2.6,4.3-9.1,4.3-9.1-0.5-10-12.8-9.6-12.8-9.6H0V69.8H21.4C33.9,69.8,33,60,33,60h0ZM20.9,62.9H8.1V54.8H20.8l0.4,0.1a4.62,4.62,0,0,1,3.3,2.6,4.89,4.89,0,0,1-.6,3.6c0.1,0-.7,1.5-3,1.8h0Zm2.7-17.3a4.3,4.3,0,0,1-3.1,1.9H8.1V39.8H20.4s2.7-.1,3.6,2a6.13,6.13,0,0,1-.4,3.8h0Z" fill="#fff"/>
-                  </svg>
-                </a>
-              </div>
-
               <div class="col-xs-6 col-md-2 siemens">
                 <a target="_blank" href="http://www.siemens.com/entry/cc/en/">
                   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 554.7 88.3">
@@ -106,7 +93,10 @@ description = ""
                 </a>
               </div>
 
-              <div class="col-xs-6 col-md-2 ericsson">
+            </div>
+            <div class="row bottom-logo-container">
+
+              <div class="col-xs-6 col-md-2 pivotal">
                 <a target="_blank" href="http://pivotal.io/">
                   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 428.14 103.47">
                     <title>pivotal</title>
@@ -122,8 +112,37 @@ description = ""
                   </svg>
                 </a>
               </div>
+
+              <div class="col-xs-6 col-md-2 ge">
+                <a target="_blank" href="http://www.ge.com/">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 331.51 331.52">
+                    <title>General_Electric_logo_white</title>
+                    <path d="M153.44,0.45a165.75,165.75,0,1,1-90,34.81,165.75,165.75,0,0,1,90-34.81m0,7.94a156.1,156.1,0,0,0-56,15,158.06,158.06,0,0,0-68,62.86C6.07,125.4,1.57,175,16.85,217.87A158.5,158.5,0,0,0,67.69,289a156.83,156.83,0,0,0,95.25,33.92,154.68,154.68,0,0,0,72.67-16.44,158,158,0,0,0,67.82-65.09,156,156,0,0,0,18.63-91.61c-4.53-51-36.43-98.36-81.45-122.62A155.76,155.76,0,0,0,153.4,8.39h0Z" transform="translate(0.11 0.01)" fill="#fff"/>
+                    <path d="M125.55,23.36A147.57,147.57,0,0,1,210,24.77a9.26,9.26,0,0,1,3,2c-4.49-.33-8.61-2.36-13-3.12-11.08-2.18-22.64-3.28-33.91-1.6-7.06,1.27-14.47,4-18.95,9.9-3.37,4.38-3.73,11.26.18,15.42,4.34,4.59,12,4.34,16.85.63,5.68-4.17,11.19-9.14,18.28-10.69,14.41-3.54,29.52-.7,43.47,3.46A110.74,110.74,0,0,1,271.4,65.34c21.43,18.93,34.31,46.11,39.2,74A149.54,149.54,0,0,1,306.2,211a2.32,2.32,0,0,1-2.07,1.88c4.28-15.69,7.46-32.34,4.26-48.54-1.68-7.82-5.53-16.64-13.76-19.31-6.3-2.23-14,2.1-14.48,8.95-1.2,7.33,4.79,12.61,8.52,18.1,8,11.5,7,26.41,5.06,39.6-3.68,17.86-9.64,35.64-20.46,50.52-16.7,24-43.3,39.79-71.41,46.55a159.23,159.23,0,0,1-74.71-.21c-3.21-1-6.86-1.39-9.35-3.85,4.65,0,9,2,13.51,2.73,12.43,2.26,25.42,3.66,37.84.55,5.63-1.55,11.33-4.23,14.87-9,3.28-4.5,3.21-11.39-.82-15.41a11.77,11.77,0,0,0-13.76-2.12c-5.3,2.87-9.35,7.59-14.76,10.3-10.91,5.3-23.57,4.52-35.21,2.56-19.3-3.79-38.37-10.79-53.93-23.1-20.66-15.88-35-39-42-64a154.59,154.59,0,0,1-.7-80.42c1.17-2.72.72-7,3.82-8.3-4,15-7.09,30.72-4.68,46.26,1.22,6.9,3.64,14.21,9.35,18.69,4,3.27,10.15,4.47,14.53,1.33,4.67-2.73,6.21-9.21,4-14-2.28-5.4-6.91-9.33-9.56-14.53-5.73-10.47-5.1-23-3.58-34.43,3.22-18.36,9.43-36.5,20.22-51.82C73,46.69,98.33,30.74,125.44,23.42m3.72,55.75c-9,4.83-15.12,13.46-19.63,22.36-4.79,9.15-6.77,19.37-7.71,29.55a10.89,10.89,0,0,1-9-8.32c-2.06-6.29.12-12.74,1.24-19,0.5-1.8-.87-3.27-1.6-4.75a9.68,9.68,0,0,0-9.31,5.07c-5.12,9.57-4.67,22.48,2.41,31,4.06,5.14,10.47,7.68,16.84,8.36,2.15,6.62,6.35,13.08,13.1,15.68,8.26,3.33,17.33-.16,24.51-4.5a31.79,31.79,0,0,1-1.33,7.93c-2.52,2-5.59,3.22-8.41,4.79-13.85,7.3-28,14.65-39.6,25.28-8.48,8-15.15,18.55-16.43,30.28-0.62,9.22,3.05,19.34,11.13,24.41,8.44,5.59,19.57,5.28,28.77,1.81,11.6-4.42,20.25-14.26,26-25,8.46-15.2,9.91-32.93,11.14-49.94,0.34-2-.08-4.81,2.26-5.67A413,413,0,0,0,193.67,143c1.52,1.87,3,3.75,4.45,5.68-6.57,3.85-13.19,8.07-18.19,14.07-18.66,20.41-19,55.44.59,75.36,10,10.55,25.37,15.06,39.6,12.95a44.34,44.34,0,0,0,31.58-21.49c8.8-14.52,7.36-34.83-4.08-47.5-10.7-11.82-31.53-11.59-42,.41-8.23,8.66-8.5,24,.09,32.45,3.48,3.47,9.54,5.57,13.91,2.58,2.82-2,2.55-6.37.28-8.72-2.94-3.55-6.42-7.66-5.54-12.62,0.88-6.45,8.09-10.4,14.16-9,5.2,0.81,9.35,4.87,11.28,9.63a30.92,30.92,0,0,1-6.2,32.68c-8.66,9-23.72,10.45-34.17,3.76-9.28-5.71-14.56-16.3-16.19-26.81-1.71-12.67.72-26.34,8.58-36.67,5.06-6.54,12.12-11.91,20.24-13.85,6.82,0.52,13.89,1.75,20.57-.43,3.14-1.07,6.2-4.59,4.6-8s-6-4.59-9.52-5.33c-5.29-1.05-10.55.36-15.72,1.35-3.61-1.24-5.52-5-6.86-8.37,10-7.5,20-15.65,26.78-26.32,4-6.41,6.54-14.28,4.68-21.81a14.33,14.33,0,0,0-10.73-10.25c-8.7-2.19-17.6,2.2-23.51,8.43-9.5,10.31-14.32,24.6-13.88,38.54-0.13,2.88,1,5.9.17,8.67-7.12,5.75-15.08,10.36-22.71,15.36-4.41,2.56-8.61,5.51-13.29,7.58a49.44,49.44,0,0,1,1.58-13.22c3.37-4.61,7.61-8.62,10.29-13.74,2-3.53,3.81-8,1.77-11.9-1.87-2.89-6-2.61-8.72-1.17-5.78,2.9-8.95,9-11.28,14.76-1.6,3.67-1.78,8.22-5.2,10.82-4.76,4.16-10.5,8.34-17.12,8.1-3.78,0-6.3-3.54-7.1-6.88,10.46-4.06,19.19-11.64,26.27-20.2,6.55-8.42,11.76-18.36,12.64-29.14,0.49-5.43-1.45-11.58-6.41-14.42-6.24-3.41-14-2.45-20.09.75Z" transform="translate(0.11 0.01)" fill="#fff"/>
+                    <path d="M135.26,89.07c2.43-1.84,6.44-1.06,7.59,1.91,0.89,3.66-.46,7.37-2,10.64a75.8,75.8,0,0,1-18.6,23.46,23.34,23.34,0,0,1-6.36,4.06c0.31-8,3.07-15.79,6.49-23C125.54,99.77,129.22,93.18,135.26,89.07Z" transform="translate(0.11 0.01)" fill="#fff"/>
+                    <path d="M213.43,92.21c2.15-2.48,5.85-5,9.13-3.27,3.6,2.13,1.72,6.9.3,9.82-4.95,9.13-12.29,16.83-20.25,23.4A45.68,45.68,0,0,1,213.43,92.21Z" transform="translate(0.11 0.01)" fill="#fff"/>
+                    <path d="M106.38,197.26a137.8,137.8,0,0,1,30.76-19.71,127.54,127.54,0,0,1-8.67,35.79c-4,9.18-9.86,18.63-19.62,22.39-5.06,1.9-11.66,3.09-16-.91C88.7,231.14,89,224.9,90.19,220,92.67,210.77,99.44,203.49,106.38,197.26Z" transform="translate(0.11 0.01)" fill="#fff"/>
+                  </svg>
+                </a>
+              </div>
+
+              <div class="col-xs-6 col-md-2 baidu">
+                <a target="_blank" href="http://www.baidu.com/">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 221.8 71.25">
+                    <title>Baidu</title>
+                    <path d="M92.9,24.6c-0.4-3.1-4.1-8.6-9-8.2-6.3.6-7.3,9.6-7.3,9.6-0.8,4.2,2,13.2,9.8,11.5S93.1,26.6,92.9,24.6ZM100.8,0c-4.3,0-7.7,4.9-7.7,11s3.5,11,7.7,11,7.7-4.9,7.7-11S105.1,0,100.8,0Zm21.6,1.8c-4.1-.9-9.1,5.6-9.6,9.8-0.6,5.2.7,10.4,6.5,11.1s9.4-5.4,10.1-10S126.4,2.7,122.4,1.8Zm19.5,28.7c0-2.2-1.8-8.9-8.7-8.9s-7.8,6.3-7.8,10.8c0,4.2.4,10.2,8.9,10S141.9,32.7,141.9,30.5ZM97.7,50.9a4.57,4.57,0,0,0-3.1,2.8,7.3,7.3,0,0,0-.3,3.8A4.42,4.42,0,0,0,98,60.9h4.1V51H97.7V50.9Zm0,0a4.57,4.57,0,0,0-3.1,2.8,7.3,7.3,0,0,0-.3,3.8A4.42,4.42,0,0,0,98,60.9h4.1V51H97.7V50.9Zm35.6-1s-8.9-6.8-14-14.3c-7-10.9-17-6.5-20.3-.9s-8.5,9.1-9.2,10S79.1,51,81.3,60.8s10,9.6,10,9.6a42.67,42.67,0,0,0,12.4-.9,25.71,25.71,0,0,1,12.4.4s15.5,5.2,19.7-4.8S133.3,49.9,133.3,49.9ZM106.7,64.8H96.6c-4.3-.9-6.1-3.8-6.3-4.4a11.47,11.47,0,0,1-.8-7,8.75,8.75,0,0,1,7.2-6.5h5.4V40.3l4.6,0.1V64.8Zm18.8-.1H113.9c-4.5-1.2-4.7-4.4-4.7-4.4V47.6l4.7-.1V59a2.42,2.42,0,0,0,1.8,1.5h4.8V47.6h5V64.7ZM94.6,53.6a7.3,7.3,0,0,0-.3,3.8A4.42,4.42,0,0,0,98,60.8h4.1V50.9H97.8A5,5,0,0,0,94.6,53.6Z" fill="#fff"/>
+                    <path d="M180.7,39.1V33.7H145.1v5.5h15.3L159,42.5H146V69.6h30.9c3.2,0,2.9-3.3,2.9-3.3V42.5h-13l1.1-3.4h12.8Zm-6.9,24.7a1.53,1.53,0,0,1-.9.9H152.4V58.4h21.4v5.4h0Zm0-10.6H152.4v-6h21.4v6h0Z" fill="#fff"/>
+                    <path d="M221.4,33.9h-14V31.2h-6.6v2.6h-16V69.6h5.8V38.4h30.8V33.9Zm-3.7,7.4V39.2h-5.6v2.1H200.5v-2h-5.3v2h-3.6l0.1,4.1h3.5V53h19.4c2.7,0,3.1-2.9,3.1-2.9V45.3h4.1V41.2l-4.1.1h0ZM212,48.1a1.75,1.75,0,0,1-1.1.9H200.4V45.2H212v2.9h0ZM192.3,58.5l9,5.2c-0.7.8-3.8,1.8-3.8,1.8h-6v4h8.1a39.7,39.7,0,0,0,6.9-2.8,13.65,13.65,0,0,0,5.4,2.4h9.3v-4h-7a10.64,10.64,0,0,1-3.6-1.4l10.6-6.1V54.3H192.3v4.2h0Zm18.6,0-5.1,2.7-4.7-2.7h9.8Z" fill="#fff"/>
+                    <path d="M65.9,39.6h7.8V32.8H65.9v6.8Zm0,29.8h7.8V42.6H65.9V69.4Z" fill="#fff"/>
+                    <path d="M53.2,42.6H36.6v5.6H51.1s3.5,0.9,3.5,3v2H41.5s-5.2.5-6.8,6.7a10.43,10.43,0,0,0,.3,4.8,8.32,8.32,0,0,0,6.2,4.8h21V50.3a10.19,10.19,0,0,0-9-7.7h0Zm1.5,21.6H44.1a3.49,3.49,0,0,1-2-1.8,2.38,2.38,0,0,1,0-1.9,3.79,3.79,0,0,1,2.3-2H54.8v5.7H54.7Z" fill="#fff"/>
+                    <path d="M33,60a9.34,9.34,0,0,0-5.6-8.8c5-2.6,4.3-9.1,4.3-9.1-0.5-10-12.8-9.6-12.8-9.6H0V69.8H21.4C33.9,69.8,33,60,33,60h0ZM20.9,62.9H8.1V54.8H20.8l0.4,0.1a4.62,4.62,0,0,1,3.3,2.6,4.89,4.89,0,0,1-.6,3.6c0.1,0-.7,1.5-3,1.8h0Zm2.7-17.3a4.3,4.3,0,0,1-3.1,1.9H8.1V39.8H20.4s2.7-.1,3.6,2a6.13,6.13,0,0,1-.4,3.8h0Z" fill="#fff"/>
+                  </svg>
+                </a>
+              </div>
+
             </div>
-            <p class="bottom-info">Companies like Ericsson, HTC, Baidu, Siemens, VMware and Pivotal rely on the NATS enterprise messaging system for its highly performant and resilient capabilities.</p>
+
+            <p class="bottom-info">Companies like Ericsson, HTC, Siemens, VMware, Pivotal, GE and Baidu rely on the NATS enterprise messaging system for its highly performant and resilient capabilities.</p>
           </div>
         </div>
       </div>
