added partner and comapny logos

--- a/content/community.html
+++ b/content/community.html
@@ -85,10 +85,6 @@ description = "NATS is a high performance messaging system that acts as a distri
       <td>An Arduino / Spark Core / Particle Photon compatible C++ library for communicating with a NATS server.</td>
     </tr>
     <tr>
-      <td><a href="https://github.com/dankomiocevic/aws-nats" target="_blank">AWS NATS</a></td>
-      <td>This repository contains tools and templates to help using NATS in the Amazon Web Services platform.</td>
-    </tr>
-    <tr>
       <td><a href="http://bridgevine.com" target="_blank">Bridgevine</a></td>
       <td>Bridgvine provides a customer acquisition technology, and NATS acts as a transaction engine in their platform</td>
     </tr>
@@ -105,10 +101,6 @@ description = "NATS is a high performance messaging system that acts as a distri
       <td>CodeFresh is an automated Docker workflow tool for Development teams</td>
     </tr>
     <tr>
-      <td><a href="https://github.com/dokku/dokku-nats" target="_blank">Dokku-NATS</a></td>
-      <td>NATS plugin for Dokku, a PaaS Platform</td>
-    </tr>
-    <tr>
       <td><a href="https://github.com/cloudfoundry-community/fluent-plugin-nats" target="_blank">Fluentd Event Collector</a></td>
       <td>NATS plugin for the Fluentd Event Collector</td>
     </tr>
@@ -121,16 +113,6 @@ description = "NATS is a high performance messaging system that acts as a distri
       <td>A pluggable RPC microservice library in Go</td>
     </tr>
     <tr>
-      <td><a href="https://github.com/influxdata/telegraf/tree/8d0f50a6fd10cea1af84ccfdc2beeb1a61dd19bd/plugins/inputs/nats_consumer" target="_blank">InfluxData</a></td>
-      <td>The NATS consumer plugin reads from specified NATS subjects and adds messages to InfluxDB. The plugin expects messages in the Telegraf Input Data Formats. A Queue Group is used when subscribing to subjects so multiple instances of telegraf can read from a NATS cluster in parallel.</td>
-    </tr>
-    <tr>
-    </tr>
-    <tr>
-      <td><a href="https://github.com/trillium-labs/logrus-nats" target="_blank">Logrus-NATS</a></td>
-      <td>A Logrus hook for sending data to NATS.</td>
-    </tr>
-    <tr>
       <td><a href="https://github.com/pires/nats-coreos-cluster" target="_blank">NATS Clustering</a></td>
       <td>NATS clustering with CoreOS, etcd2 and Docker</td>
     </tr>
@@ -139,28 +121,12 @@ description = "NATS is a high performance messaging system that acts as a distri
       <td>This library will resend configured nats messages directly to logstash through a tcp connection.</td>
     </tr>
     <tr>
-      <td><a href="https://github.com/repejota/nats-mon" target="_blank">NATS-Mon</a></td>
-      <td>A realtime web based NATS monitor</td>
-    </tr>
-    <tr>
-      <td><a href="https://github.com/cmfatih/natsboard" target="_blank">NATSBoard</a></td>
-      <td>Dashboard for monitoring NATS. It provides real-time information from NATS server.</td>
-    </tr>
-    <tr>
-      <td><a href="https://github.com/nvisibleinc/go-ari-proxy" target="_blank">Nvisible Inc Go ARI Proxy</a></td>
-      <td>An implementation of the [go-ari-library] used to connect to the Asterisk REST Interface for delivery of Events and Commands across a message bus.</td>
-    </tr>
-    <tr>
       <td><a href="http://www.piperpushcache.com/opslog_build.html" target="_blank">Piper Push Cache</a></td>
       <td>Piper Push Cache is a JSON caching server that supports both WebSockets and SSE on the outgoing side and among others, NATS messages on the incoming side.</td>
     </tr>
     <tr>
       <td><a href="https://github.com/sohlich/nats-proxy" target="_blank">REST to NATS Proxy</a></td>
       <td>This library provides translation of HTTP requests to NATS messaging platform.</td>
-    </tr>
-    <tr>
-      <td><a href="http://bit.ly/1X36qKZ" target="_blank">Rancher NATS</a></td>
-      <td>This is an extended version of the official Docker image for nats. It adds support to set up a cluster easily onrancher.</td>
     </tr>
     <tr>
       <td><a href="https://packagist.org/packages/octante/nats-bundle" target="_blank">Symfony NATS</a></td>
@@ -180,10 +146,34 @@ description = "NATS is a high performance messaging system that acts as a distri
 <hr>
 
 <h2>Partners</h2>
+<p class="lead">We work with a variety of companies to ensure NATS is delivered in a broad range of solutions used by our community</p>
 
+<div class="row partners-logos">
+  <div class="col-xs-6 col-md-4">
+    <a href=""><img src="/img/partners/docker.jpg" class="img-responsive" alt="Docker"></a>
+  </div>
+  <div class="col-xs-6 col-md-4">
+    <a href=""><img src="/img/partners/influxdata.jpg" class="img-responsive" alt="Docker"></a>
+  </div>
+  <div class="col-xs-6 col-md-4">
+    <a href=""><img src="/img/partners/redhat.jpg" class="img-responsive" alt="Docker"></a>
+  </div>
+  <div class="col-xs-6 col-md-4">
+    <a href=""><img src="/img/partners/treasure-data.jpg" class="img-responsive" alt="Docker"></a>
+  </div>
+  <div class="col-xs-6 col-md-4">
+    <a href=""><img src="/img/partners/spindox.jpg" class="img-responsive" alt="Docker"></a>
+  </div>
+  <div class="col-xs-6 col-md-4">
+    <a href=""><img src="/img/partners/wg.jpg" class="img-responsive" alt="Docker"></a>
+  </div>
+</div>
 
-<h3>NATS Connectors</h3>
+<hr>
 
+<h2>Connectors and Utilities</h2>
+
+<h3>Connectors</h3>
 <div class="table-responsive">
   <table class="table table-striped">
     <thead>
@@ -233,12 +223,6 @@ description = "NATS is a high performance messaging system that acts as a distri
         <td>Community</td>
       </tr>
       <tr>
-        <tr>
-          <td><a href="https://github.com/influxdata/telegraf/tree/8d0f50a6fd10cea1af84ccfdc2beeb1a61dd19bd/plugins/inputs/nats_consumer" target="_blank">Telegraf</a></td>
-          <td>The NATS consumer plugin reads from specified NATS subjects and adds messages to InfluxDB. The plugin expects messages in the Telegraf Input Data Formats. A Queue Group is used when subscribing to subjects so multiple instances of telegraf can read from a NATS cluster in parallel.</td>
-          <td><a target="_blank" href="https://github.com/influxdata">InfluxData</a></td>
-          <td>Community</td>
-        </tr>
         <td><a href="https://github.com/Logimethods/nats-connector-spark" target="_blank">Apache Spark</a></td>
         <td>Provides an Apache Spark (a fast and general engine for large-scale data processing) integration with NATS.</td>
         <td><a target="_blank" href="https://github.com/laugimethods">Laurent Magnin</a> at Logimethods</td>
@@ -254,11 +238,81 @@ description = "NATS is a high performance messaging system that acts as a distri
   </table>
 </div>
 
+<h3>Utilities</h3>
+
+<div class="table-responsive">
+  <table class="table table-striped">
+    <thead>
+      <tr>
+        <th class="col-md-2">Project or Company</th>
+        <th class="col-md-10">Description</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td><a href="https://github.com/dokku/dokku-nats" target="_blank">Dokku-NATS</a></td>
+        <td>NATS plugin for Dokku, a PaaS Platform</td>
+      </tr>
+      <tr>
+        <td><a href="https://github.com/dankomiocevic/aws-nats" target="_blank">AWS NATS</a></td>
+        <td>This repository contains tools and templates to help using NATS in the Amazon Web Services platform.</td>
+      </tr>
+      <tr>
+        <td><a href="https://github.com/influxdata/telegraf/tree/8d0f50a6fd10cea1af84ccfdc2beeb1a61dd19bd/plugins/inputs/nats_consumer" target="_blank">Telegraf</a></td>
+        <td>The NATS consumer plugin reads from specified NATS subjects and adds messages to InfluxDB. The plugin expects messages in the Telegraf Input Data Formats. A Queue Group is used when subscribing to subjects so multiple instances of telegraf can read from a NATS cluster in parallel.</td>
+      </tr>
+      <tr>
+        <td><a href="https://github.com/trillium-labs/logrus-nats" target="_blank">Logrus-NATS</a></td>
+        <td>A Logrus hook for sending data to NATS.</td>
+      </tr>
+      <tr>
+        <td><a href="https://github.com/repejota/nats-mon" target="_blank">NATS-Mon</a></td>
+        <td>A realtime web based NATS monitor</td>
+      </tr>
+      <tr>
+        <td><a href="https://github.com/cmfatih/natsboard" target="_blank">NATSBoard</a></td>
+        <td>Dashboard for monitoring NATS. It provides real-time information from NATS server.</td>
+      </tr>
+      <tr>
+        <td><a href="https://github.com/nvisibleinc/go-ari-proxy" target="_blank">Nvisible Inc Go ARI Proxy</a></td>
+        <td>An implementation of the [go-ari-library] used to connect to the Asterisk REST Interface for delivery of Events and Commands across a message bus.</td>
+      </tr>
+      <tr>
+        <td><a href="http://bit.ly/1X36qKZ" target="_blank">Rancher NATS</a></td>
+        <td>This is an extended version of the official Docker image for nats. It adds support to set up a cluster easily onrancher.</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+
 <hr>
 
-<h3>Companies</h3>
-<p>To grow the NATS Ecosystem and ensure NATS meets a variety of requirements we partner with leading companies across the industry</p>
-<p>If you would like to partner with NATS, please contact <a href="mailto:info@nats.io">info@nats.io</a></p>
+<h2>Companies</h2>
+<p class="lead">The ecosystem of companies using NATS varies from rapidly growing startups to some of the largest companies in the world.</p>
+
+<div class="row company-logos">
+  <div class="col-xs-6 col-md-3">
+    <a href=""><img src="/img/companies/ericsson.jpg" class="img-responsive" alt="Ericsson"></a>
+  </div>
+  <div class="col-xs-6 col-md-3">
+    <a href=""><img src="/img/companies/htc.jpg" class="img-responsive" alt="htc"></a>
+  </div>
+  <div class="col-xs-6 col-md-3">
+    <a href=""><img src="/img/companies/siemens.jpg" class="img-responsive" alt="Siemens"></a>
+  </div>
+  <div class="col-xs-6 col-md-3">
+    <a href=""><img src="/img/companies/vmware.jpg" class="img-responsive" alt="vmware"></a>
+  </div>
+  <div class="col-xs-6 col-md-3">
+    <a href=""><img src="/img/companies/pivotal.jpg" class="img-responsive" alt="Pivotal"></a>
+  </div>
+  <div class="col-xs-6 col-md-3">
+    <a href=""><img src="/img/companies/ge.jpg" class="img-responsive" alt="GE"></a>
+  </div>
+  <div class="col-xs-6 col-md-3">
+    <a href=""><img src="/img/companies/baidu.jpg" class="img-responsive" alt="Baidu"></a>
+  </div>
+</div>
 
 <div class="row">
   <div class="col-md-4">
