Updated the community page

--- a/content/community.html
+++ b/content/community.html
@@ -150,22 +150,22 @@ description = "NATS is a high performance messaging system that acts as a distri
 
 <div class="row partners-logos">
   <div class="col-xs-6 col-md-4">
-    <a href=""><img src="/img/partners/docker.jpg" class="img-responsive" alt="Docker"></a>
+    <a target="_blank" href="https://www.docker.com/"><img src="/img/partners/docker.jpg" class="img-responsive" alt="Docker"></a>
   </div>
   <div class="col-xs-6 col-md-4">
-    <a href=""><img src="/img/partners/influxdata.jpg" class="img-responsive" alt="Docker"></a>
+    <a target="_blank" href="https://influxdata.com/"><img src="/img/partners/influxdata.jpg" class="img-responsive" alt="Influx Data"></a>
   </div>
   <div class="col-xs-6 col-md-4">
-    <a href=""><img src="/img/partners/redhat.jpg" class="img-responsive" alt="Docker"></a>
+    <a target="_blank" href="http://connect.redhat.com/"><img src="/img/partners/redhat.jpg" class="img-responsive" alt="Redhat technology Partner"></a>
   </div>
   <div class="col-xs-6 col-md-4">
-    <a href=""><img src="/img/partners/treasure-data.jpg" class="img-responsive" alt="Docker"></a>
+    <a target="_blank" href="https://www.treasuredata.com/"><img src="/img/partners/treasure-data.jpg" class="img-responsive" alt="Treasure Data"></a>
   </div>
   <div class="col-xs-6 col-md-4">
-    <a href=""><img src="/img/partners/spindox.jpg" class="img-responsive" alt="Docker"></a>
+    <a target="_blank" href="https://www.spindox.it/en/"><img src="/img/partners/spindox.jpg" class="img-responsive" alt="spindox digital soul"></a>
   </div>
   <div class="col-xs-6 col-md-4">
-    <a href=""><img src="/img/partners/wg.jpg" class="img-responsive" alt="Docker"></a>
+    <a target="_blank" href="http://www.williamsgarcia.com/"><img src="/img/partners/wg.jpg" class="img-responsive" alt="Williams Garcia"></a>
   </div>
 </div>
 
@@ -292,25 +292,25 @@ description = "NATS is a high performance messaging system that acts as a distri
 
 <div class="row company-logos">
   <div class="col-xs-6 col-md-3">
-    <a href=""><img src="/img/companies/ericsson.jpg" class="img-responsive" alt="Ericsson"></a>
+    <a target="_blank" href="https://www.ericsson.com/"><img src="/img/companies/ericsson.jpg" class="img-responsive" alt="Ericsson"></a>
   </div>
   <div class="col-xs-6 col-md-3">
-    <a href=""><img src="/img/companies/htc.jpg" class="img-responsive" alt="htc"></a>
+    <a target="_blank" href="http://www.htc.com/"><img src="/img/companies/htc.jpg" class="img-responsive" alt="htc"></a>
   </div>
   <div class="col-xs-6 col-md-3">
-    <a href=""><img src="/img/companies/siemens.jpg" class="img-responsive" alt="Siemens"></a>
+    <a target="_blank" href="https://www.siemens.com"><img src="/img/companies/siemens.jpg" class="img-responsive" alt="Siemens"></a>
   </div>
   <div class="col-xs-6 col-md-3">
-    <a href=""><img src="/img/companies/vmware.jpg" class="img-responsive" alt="vmware"></a>
+    <a target="_blank" href="http://www.vmware.com/"><img src="/img/companies/vmware.jpg" class="img-responsive" alt="vmware"></a>
   </div>
   <div class="col-xs-6 col-md-3">
-    <a href=""><img src="/img/companies/pivotal.jpg" class="img-responsive" alt="Pivotal"></a>
+    <a target="_blank" href="http://pivotal.io/"><img src="/img/companies/pivotal.jpg" class="img-responsive" alt="Pivotal"></a>
   </div>
   <div class="col-xs-6 col-md-3">
-    <a href=""><img src="/img/companies/ge.jpg" class="img-responsive" alt="GE"></a>
+    <a target="_blank" href="http://www.ge.com/"><img src="/img/companies/ge.jpg" class="img-responsive" alt="GE"></a>
   </div>
   <div class="col-xs-6 col-md-3">
-    <a href=""><img src="/img/companies/baidu.jpg" class="img-responsive" alt="Baidu"></a>
+    <a target="_blank" href="http://www.baidu.com/"><img src="/img/companies/baidu.jpg" class="img-responsive" alt="Baidu"></a>
   </div>
 </div>
 
